# param-sweeps

./: .pre-commit-config.yaml  environment.yml  meta.yaml  pyproject.toml  recipe.yaml
.github/workflows/: issue_to_jira.yml  pr_add_jira_summary.yml  pytest-windows.yml  python_deploy_dev.yml
param_sweeps/: generate.py
sweeps/: __init__.py
tests/: version_test.py
