[tool.poetry]
name = "param-sweeps"
version = "0.1.0"
license = "MIT"
description = "Open-sourced Applications in Geoscience"
authors = ["Mira Geoscience <support@mirageoscience.com>"]
repository = "https://github.com/MiraGeoscience/param-sweeps"
documentation = "https://param-sweeps.readthedocs.io/en/latest/"
homepage = "https://mirageoscience.com"
readme = "README.md"
keywords = ["earth sciences"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
pip = "^22"
numpy = "^1.23"
h5py = "^3.7"
geoh5py = {git = "https://github.com/MiraGeoscience/geoh5py.git", rev = "v0.3.0"}

[tool.poetry.dev-dependencies]
poetry-publish = {git = "https://github.com/MiraGeoscience/poetry-publish.git", rev = "pending_fixes"}

[tool.poetry.scripts]
publish = 'devtools.publish:publish'

[tool.isort]
# settings for compatibility between ``isort`` and ``black`` formatting
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
# auto-updated by seed-isort-config

[tool.black]
# defaults are just fine

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
